--- a/package.json
+++ b/package.json
@@ -1,31 +1,94 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "table-app",
+  "version": "0.0.8",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@contentstack/app-sdk": "github:contentstack/app-sdk#main",
-    "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@contentstack/app-sdk": "^2.0.0",
+    "@contentstack/venus-components": "^3.0.0",
+    "@datadog/browser-rum": "^4.25.0",
+    "@types/react": "^17.0.47",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.9",
+    "axios": "^1.8.3",
+    "jotai": "^1.7.2",
+    "jsonfile": "^6.1.0",
+    "lodash": "^4.17.21",
+    "node-polyfill-webpack-plugin": "^4.1.0",
+    "papaparse": "^5.3.2",
+    "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-contenteditable": "^3.3.6",
+    "react-dom": "^18.2.0",
+    "react-excel-renderer": "^1.1.0",
+    "react-popper": "^2.3.0",
+    "react-router-dom": "^6.4.0",
+    "react-scripts": "^5.0.1",
+    "react-table-plugins": "^1.3.2",
+    "styled-components": "^6.1.0",
+    "trackjs": "^3.10.1",
+    "typescript": "^4.7.4",
+    "web-vitals": "^1.0.1"
   },
-  "engines": {
-    "node": "20"
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "npm install --legacy-peer-deps && react-app-rewired --max_old_space_size=4096 build && npx gulp",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{ts,tsx} --quiet --fix",
+    "lint-ts": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
+    "show-report": "npx playwright show-report",
+    "test:chrome": "npx playwright test --config=playwright.config.ts --project=Chromium",
+    "test:firefox": "npx playwright test --config=playwright.config.ts --project=firefox",
+    "test:safari": "npx playwright test --config=playwright.config.ts --project=safari",
+    "test:chrome-headed": "npx playwright test --headed --config=playwright.config.ts --project=Chromium",
+    "test:firefox-headed": "npx playwright test --headed --config=playwright.config.ts --project=firefox",
+    "test:safari-headed": "npx playwright test --headed --config=playwright.config.ts --project=safari"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@playwright/test": "^1.37.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@types/node": "^12.20.25",
+    "@types/node-sass": "^4.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "dotenv": "^16.0.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "gulp": "^4.0.2",
+    "gulp-inline-source": "^4.0.0",
+    "gulp-replace": "^1.1.3",
+    "prettier": "^2.4.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^10.0.0",
+    "style-loader": "^3.2.1",
+    "ts-loader": "^8.3.0",
+    "ts-node": "^10.2.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
+    "tslint-react": "^5.0.0",
+    "webpack": "^4.44.0"
   }
 }
